fixed clock spacings

--- a/styles/text.css
+++ b/styles/text.css
@@ -35,6 +35,7 @@
 	left: 0px;
 	height: 80px;
 	width: 320px;
+	text-align: center;
 	-webkit-transition: .4s ease-in-out;
 }
 
@@ -51,32 +52,21 @@
 
 /*hour + ampm*/
 #hours{
-	position: absolute;
-	z-index: 1;
-	height: 75px;
-	text-align: center;
+	height: 70px;
 	width: 320px;
-	left: 3px;
+	padding-left: 3px;
 	font-size: 50pt;    
 }
 
 #ampm{
 	position: absolute;
-	z-index: 1;
-	height: 75px;
 	text-align: center;
-	width: 40px;
 	font-size: 20pt;    
 }
 
 #date{
-	position: absolute;
 	width: 320px;
 	height: 20px;
-	left: 0px;
-	top: 57px;
-	text-align: center;
-	z-index: 1;
 	font-size: 14pt;
 	word-spacing: 1px;
 }
